# push-hub

./: .gitignore  README.md
.github/workflows/: android-aar.yml
admin/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
admin/nginx/: default.conf.template
admin/src/: main.ts
android/: .gitignore  PUBLISHING.md  build.gradle.kts  gradle.properties  settings.gradle.kts
docs/: admin-api.md  android-integration.md  architecture.md  deploy.md  server-api.md
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
server/sql/: schema.sql
server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
server/src/admin/: auth.rs  mod.rs
server/src/db/: mod.rs  seed.rs
server/src/db/postgres/: admin_user.rs  app.rs  channel.rs  device.rs  mod.rs  outbox.rs  push_trace.rs  template.rs
server/src/device/: mod.rs  register.rs
server/src/models/: admin.rs  channel.rs  click_action.rs  delivery_mode.rs  device.rs  device_id.rs  mod.rs  platform.rs  push.rs  push_trace.rs  template.rs  user.rs
server/src/push/: api_auth.rs  credentials.rs  fallback.rs  fallback_worker.rs  hub.rs  hub_manager.rs  init_snippet.rs  mod.rs  online.rs  online_hub.rs  service.rs  template_render.rs  trace.rs
server/src/push/vendors/: honor.rs  huawei.rs  meizu.rs  mod.rs  oppo.rs  vivo.rs  xiaomi.rs
server/src/routes/: devices.rs  health.rs  mod.rs  online.rs  push.rs
server/src/routes/admin/: apps.rs  auth.rs  channels.rs  helpers.rs  mod.rs  operations.rs  templates.rs
(+99 files in other folders)
