[package]
name = "push-hub-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", features = ["sink"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sha2 = "0.10"
md5 = "0.7"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
bcrypt = "0.16"
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = "0.4"
